Created paginator, filters and helpers and filter form